--- a/css/style.css
+++ b/css/style.css
@@ -671,6 +671,15 @@ img{
 	display: inline-block;
 }
 
+.parallax_item .content .parallax_title2 span{
+	font-weight: 700;
+	font-size: 35px;
+	font-family: 'Raleway', sans-serif;
+	padding: 10px 20px;
+	border: 3px solid #333333;
+	display: inline-block;
+}
+
 .counters{
 	text-align: center;
 }
