--- a/css/style.css
+++ b/css/style.css
@@ -2820,6 +2820,12 @@ body.theme_10 #portfolio_popup .section_title span{
 
 }
 
+@media only screen and (max-width: 475px){
+    .bullet{
+    visibility:hidden;
+    }	
+}
+
 @media only screen and (min-width: 768px){
 	
 }
