--- a/css/style.css
+++ b/css/style.css
@@ -2830,9 +2830,11 @@ body.theme_10 #portfolio_popup .section_title span{
 	
 }
 
-/* Landscape phone to portrait tablet */
-@media only screen and (min-width: 480px) and (max-width: 767px) {
-
+/* Landscape ipad */
+@media only screen and (min-width: 1024px) and (max-height: 768px)  {
+	.date{
+		margin-left: 8px;
+	}
 }
 
 @media only screen and (max-width: 1199px) {
