--- a/layerslider/css/layerslider.css
+++ b/layerslider/css/layerslider.css
@@ -102,6 +102,17 @@
 	-webkit-transform: none !important;
 }
 
+.ls-slide-1 .ls-bg-1 {
+	left: 0px;
+	top: -15px;
+	bottom: 0px;
+	transform: none !important;
+	-o-transform: none !important;
+	-ms-transform: none !important;
+	-moz-transform: none !important;
+	-webkit-transform: none !important;
+}
+
 .ls-yourlogo {
 	position: absolute;
 	z-index: 99;
