--- a/css/style.css
+++ b/css/style.css
@@ -97,14 +97,14 @@ img{
 }
 
 .master_page{
-	overflow: hidden;
+	overflow: hidden;	
 }
 
 .master_header .master_slider_overlay{
 	position: absolute;
 	left: 0;
-	bottom: 0;
-	height: 50px;
+	bottom: 0px;
+    height: 50px;
 	width: 100%;
 	z-index: 250;
 	color: #ffffff;
